--- a/public/styles/light.css
+++ b/public/styles/light.css
@@ -16,6 +16,7 @@ body {
 }
 
 .topContainer {
+    padding: 0 15px 0 5px;
     margin-top: 10px;
     display: flex;
     flex-direction: row;
@@ -29,6 +30,9 @@ body {
     color: #0c0c0c;
     position: relative;
     width: 290px;
+    -webkit-box-shadow: 0 0 64px -3px rgba(0,0,0,0.73);
+    -moz-box-shadow: 0 0 64px -3px rgba(0,0,0,0.73);
+    box-shadow: 0 0 64px -3px rgba(0,0,0,0.73);
 }
 
 .circles {
@@ -63,6 +67,13 @@ body {
     margin-bottom: 10px;
     margin-right: 10px;
     text-align: right;
+}
+
+.smallValue {
+    font-size: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: right;
 }
 
 .buttons-container {
