--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -1,5 +1,10 @@
 .switch {
     width: 24px;
     height: 24px;
-    margin-right: 15px;
+    /*margin-right: 15px;*/
+}
+.btn {
+    background: none;
+    outline: none;
+    border: none;
 }
