--- a/public/styles/dark.css
+++ b/public/styles/dark.css
@@ -28,7 +28,7 @@ body {
     border-radius: 15px;
     color: white;
     position: relative;
-    width: 290px;
+    width: clamp(300px, 50%, 600px);
     -webkit-box-shadow: 0 0 64px -3px rgba(0,0,0,0.73);
     -moz-box-shadow: 0 0 64px -3px rgba(0,0,0,0.73);
     box-shadow: 0 0 64px -3px rgba(0,0,0,0.73);
@@ -60,7 +60,7 @@ body {
 }
 
 .value {
-    font-size: 60px;
+    font-size: clamp(2rem, 5vw, 4rem);
     font-weight: 300;
     height: 80px;
     margin-bottom: 10px;
@@ -69,17 +69,16 @@ body {
 }
 
 .smallValue {
-    font-size: 25px;
+    font-size: clamp(2rem, 5vw, 4rem);
     display: flex;
     align-items: center;
-    justify-content: right;
+    text-align: right;
 }
 
 .buttons-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    gap: 2px;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
     place-items: center;
     padding: 0 2px 2px;
 }
@@ -89,11 +88,11 @@ body {
     background-color: grey;
     cursor: pointer;
     display: flex;
-    font-size: 30px;
-    height: 70px;
+    font-size: clamp(1rem, 2vw, 2.5rem); /* Adjust font size based on viewport width */
+    height: clamp(40px, 8vw, 90px); /* Adapt height based on viewport width */
+    width: clamp(40px, 8vw, 90px); /* Adapt width based on viewport width */
     justify-content: center;
     transition: filter .3s;
-    width: 70px;
 }
 
 .button.function {
@@ -106,9 +105,30 @@ body {
 }
 
 .button.number-0 {
-    grid-column: 1 / span 2;
+    grid-column: 3 / span 2;
+    grid-row: 6;
     justify-content: center;
-    width: 142px;
+    width: calc(100% - 4px); /* Adjust based on the grid gap and number of columns it spans */
+    height: auto; /* Maintain aspect ratio */
+    aspect-ratio: 2 / 1; /* Keeps the width double the height */
+}
+
+.button.xdegy {
+    grid-column: 2;
+    grid-row: 5 / span 2;
+    justify-content: center;
+    height: calc(100% - 4px); /* Adjust based on the grid gap and number of rows it spans */
+    width: auto; /* Adjust width to maintain aspect ratio */
+    aspect-ratio: 1 / 2; /* Makes the height double the width for vertical layout */
+}
+
+.button.xry {
+    grid-column: 1 ;
+    grid-row: 5 / span 2;
+    justify-content: center;
+    height: calc(100% - 4px); /* Adjust based on the grid gap and number of rows it spans */
+    width: auto; /* Ensure it maintains the aspect ratio */
+    aspect-ratio: 1 / 2; /* Height is double the width */
     border-bottom-left-radius: 13px;
 }
 
