--- a/public/styles/light.css
+++ b/public/styles/light.css
@@ -29,7 +29,7 @@ body {
     border-radius: 15px;
     color: #0c0c0c;
     position: relative;
-    width: 290px;
+    width: auto;
     -webkit-box-shadow: 0 0 64px -3px rgba(0,0,0,0.73);
     -moz-box-shadow: 0 0 64px -3px rgba(0,0,0,0.73);
     box-shadow: 0 0 64px -3px rgba(0,0,0,0.73);
@@ -61,7 +61,7 @@ body {
 }
 
 .value {
-    font-size: 60px;
+    font-size: 4rem;
     font-weight: 300;
     height: 80px;
     margin-bottom: 10px;
@@ -70,7 +70,7 @@ body {
 }
 
 .smallValue {
-    font-size: 25px;
+    font-size: 2rem;
     display: flex;
     align-items: center;
     justify-content: right;
@@ -78,8 +78,8 @@ body {
 
 .buttons-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
     gap: 2px;
     place-items: center;
     padding: 0 2px 2px;
@@ -90,7 +90,7 @@ body {
     background-color: #c7c5c5;
     cursor: pointer;
     display: flex;
-    font-size: 30px;
+    font-size: 2rem;
     height: 70px;
     justify-content: center;
     transition: filter .3s;
@@ -107,9 +107,24 @@ body {
 }
 
 .button.number-0 {
-    grid-column: 1 / span 2;
+    grid-column: 3 / span 2;
+    grid-row: 6;
     justify-content: center;
     width: 142px;
+}
+
+.button.xdegy {
+    grid-column: 2;
+    grid-row: 5 / span 2;
+    justify-content: center;
+    height: 142px;
+}
+
+.button.xry {
+    grid-column: 1 ;
+    grid-row: 5 / span 2;
+    justify-content: center;
+    height: 142px;
     border-bottom-left-radius: 13px;
 }
 
