--- a/public/styles/dark.css
+++ b/public/styles/dark.css
@@ -28,7 +28,7 @@ body {
     border-radius: 15px;
     color: white;
     position: relative;
-    width: clamp(300px, 80%, 600px);
+    width: clamp(300px, 50%, 600px);
     -webkit-box-shadow: 0 0 64px -3px rgba(0,0,0,0.73);
     -moz-box-shadow: 0 0 64px -3px rgba(0,0,0,0.73);
     box-shadow: 0 0 64px -3px rgba(0,0,0,0.73);
@@ -62,7 +62,7 @@ body {
 .value {
     font-size: clamp(2rem, 5vw, 4rem);
     font-weight: 300;
-    height: 80px;
+    height: auto;
     margin-bottom: 10px;
     margin-right: 10px;
     text-align: right;
@@ -72,7 +72,7 @@ body {
     font-size: clamp(2rem, 5vw, 4rem);
     display: flex;
     align-items: center;
-    text-align: right;
+    justify-content: right;
 }
 
 .buttons-container {
@@ -80,7 +80,6 @@ body {
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
     place-items: center;
-    padding: 0 2px 2px;
 }
 
 .button {
@@ -89,8 +88,8 @@ body {
     cursor: pointer;
     display: flex;
     font-size: clamp(1rem, 2vw, 2.5rem); /* Adjust font size based on viewport width */
-    height: clamp(40px, 8vw, 90px); /* Adapt height based on viewport width */
-    width: clamp(40px, 8vw, 90px); /* Adapt width based on viewport width */
+    height: clamp(50px, 8vw, 100px); /* Adapt height based on viewport width */
+    width: clamp(50px, 8vw, 100px); /* Adapt width based on viewport width */
     justify-content: center;
     transition: filter .3s;
 }
@@ -108,27 +107,24 @@ body {
     grid-column: 3 / span 2;
     grid-row: 6;
     justify-content: center;
-    width: calc(100% - 4px); /* Adjust based on the grid gap and number of columns it spans */
-    height: auto; /* Maintain aspect ratio */
-    aspect-ratio: 2 / 1; /* Keeps the width double the height */
+    width: 100%;
+    aspect-ratio: 2 / 1;
 }
 
 .button.xdegy {
     grid-column: 2;
     grid-row: 5 / span 2;
     justify-content: center;
-    height: calc(100% - 4px); /* Adjust based on the grid gap and number of rows it spans */
-    width: auto; /* Adjust width to maintain aspect ratio */
-    aspect-ratio: 1 / 2; /* Makes the height double the width for vertical layout */
+    height: 100%;
+    aspect-ratio: 1 / 2;
 }
 
 .button.xry {
     grid-column: 1 ;
     grid-row: 5 / span 2;
     justify-content: center;
-    height: calc(100% - 4px); /* Adjust based on the grid gap and number of rows it spans */
-    width: auto; /* Ensure it maintains the aspect ratio */
-    aspect-ratio: 1 / 2; /* Height is double the width */
+    height: 100%;
+    aspect-ratio: 1 / 2;
     border-bottom-left-radius: 13px;
 }
 
